--- a/test.html
+++ b/test.html
@@ -3,10 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Real G's move in silence like Lasa(g)na-recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>TEST</h1>
-    <h2>test 2</h2>
+
+    <header>
+        <h1>Real G's move in silence like Lasa(g)na-recipe</h1>
+        <img src="parnis-azimi-YGEne25RWPI-unsplash.jpg" alt="färdig lasagne" width="200" height="150">
+        <p>En smakrik lasagne tillagad på autentiskt Lil Wayne-vis</p>
+    </header>
+
+    <main>
+        <section class="ingredienser">
+            <h2>Ingredienser</h2>
+            <ul>
+                <li>400 g sojafärs</li>
+                <li>1 gul lök, hackad</li>
+                <li>2 vitlöksklyftor, hackade</li>
+                <li>1 burk (400 g) krossade tomater</li>
+                <li>1 tsk spiskummin</li>
+                <li>1 tsk chiliflakes</li>
+                <li>1 tsk oregano</li>
+                <li>1 tsk salt</li>
+                <li>1/2 tsk svartpeppar</li>
+                <li>1 l yoghurt</li>
+                <li>125 g mozzarellaost</li>
+                <li>200 g fetaost, smulad</li>
+                <li>1 paket lasagneplattor</li>
+                <li>500 g bladspenat</li>
+            </ul>
+            <img src="parnis-azimi-V2O3QifCOos-unsplash.jpg" alt="ingredienser lasagne" width="200" height="150">
+        </section>
+
+        <section class="instruktioner">
+            <h2>Instruktioner</h2>
+            <ol>
+                <li>Sätt ugnen på 200°C.</li>
+                <li>Fräs färsen i lite olivolja tills den fått färg. Tillsätt lök och vitlök och fräs tills de är mjuka.</li>
+                <li>Häll i krossade tomater, spenat, spiskummin, oregano, salt och peppar. Låt sjuda i 10 minuter.</li>
+                <li>Blanda yoghurt och fetaost i en skål.</li>
+                <li>Varva färsås, yoghurtsås och lasagneplattor i en ugnssäker form. Avsluta med mozarella och chiliflakes som garnering.</li>
+                <li>Grädda i ugnen i 30 minuter eller tills lasagnen och mozarellan är gyllenbruna.</li>
+                
+            </ol>
+        </section>
+    </main>
+
 </body>
+
+<footer>
+    <p>För mer information, skriv till: Tropicana Motor Hotel, Hollywood, California c/o Young Tom Waits</p>
+  </footer>
+  
 </html>
